# Auto_aim

./: .gitignore  Auto_aim（复件）.csv  Matrix.py  Optimized.md  README.md  analyzer.py  communicate_log.md  corners.csv  corners.py  run2blue.sh  run2red.sh  visualize_log.py
src/Messages/: CMakeLists.txt  package.xml
src/Messages/include/: autoaim_constants.hpp
src/Messages/msg/: Armor.msg  Armorresult.msg  Basehit.msg  Debug.msg  GimbalCmd.msg  GimbalState.msg  Orienta.msg  Outpost.msg  Prediction.msg  Predictions.msg  SentryCmd.msg  Serialcmd.msg  Target.msg  Targets.msg
src/core/aimer/: package.xml
src/core/algorithms/: CMakeLists.txt  package.xml
src/core/algorithms/include/base/: ekf.hpp  filter.hpp  kalman.hpp  math.hpp  slide_weighted_avg.hpp
src/core/algorithms/include/filter/: decoupled_tracker.hpp  rotating_target_tracker.hpp  track_queue_v3.hpp  track_queue_v4.hpp
src/core/algorithms/src/: decoupled_tracker.cpp  rotating_target_tracker.cpp  track_queue_v3.cpp  track_queue_v4.cpp
src/core/auto_aim/: CMakeLists.txt  package.xml
src/core/auto_aim/aimer/: CMakeLists.txt
src/core/auto_aim/aimer/include/: aimer.hpp
src/core/auto_aim/aimer/src/: aimer.cpp
src/core/auto_aim/compensator/include/: servo_compensator.hpp
src/core/auto_aim/compensator/src/: servo_compensator.cpp
src/core/auto_aim/detected/: package.xml
src/core/auto_aim/detected/include/: armor.hpp  classifier.hpp  detect_node.hpp  detector.hpp  yolo11.hpp  yolov5.hpp
src/core/auto_aim/detected/src/: armor.cpp  classifier.cpp  detect_node.cpp  detector.cpp  yolo11.cpp  yolov5.cpp
src/core/auto_aim/planner/: package.xml
src/core/auto_aim/planner/include/: aim_planner.hpp  guard_planner.hpp  planner.hpp
src/core/auto_aim/planner/src/: aim_planner.cpp  guard_planner.cpp  planner.cpp
src/core/auto_aim/pointer/: CMakeLists.txt  package.xml
src/core/auto_aim/pointer/include/: image_processor.hpp  lightbar_detector.hpp
src/core/auto_aim/pointer/src/: image_processor.cpp  lightbar_detector.cpp
src/core/auto_aim/shooter/include/: shooter.hpp
src/core/auto_aim/shooter/src/: shooter.cpp
src/core/auto_aim/solver/: CMakeLists.txt
src/core/auto_aim/solver/cmake/: solverConfig.cmake.in
src/core/auto_aim/solver/include/: solver_node.hpp
src/core/auto_aim/solver/src/: solver_node.cpp
src/core/auto_aim/src/: auto_aim_module.cpp
src/core/auto_aim/tracker/: CMakeLists.txt
src/core/auto_aim/tracker/include/: tracker.hpp
src/core/auto_aim/tracker/src/: tracker.cpp
src/core/auto_base/: CMakeLists.txt  README_BaseHitNode.md  package.xml
src/core/auto_base/aimer/include/: light_aimer.hpp
src/core/auto_base/aimer/src/: light_aimer.cpp
src/core/auto_base/detect/include/: detector.hpp  openvino_infer.hpp
src/core/auto_base/detect/src/: detector.cpp  openvino_infer.cpp
src/core/auto_base/tracker/include/: light_tracker.hpp
src/core/auto_base/tracker/src/: light_tracker.cpp
src/core/auto_buff/: CMakeLists.txt  package.xml
src/core/auto_buff/buff_aimer/include/: buff_aimer.hpp
src/core/auto_buff/buff_aimer/src/: buff_aimer.cpp
src/core/auto_buff/buff_data_type/include/: buff_type.hpp
src/core/auto_buff/buff_data_type/src/: buff_type.cpp
src/core/auto_buff/buff_detect/include/: buff_detector.hpp  yolo11_buff.hpp
src/core/auto_buff/buff_detect/src/: buff_detector.cpp  yolo11_buff.cpp
src/core/auto_buff/buff_solver/include/: buff_solver.hpp
src/core/auto_buff/buff_solver/src/: buff_solver.cpp
src/core/auto_buff/buff_tagret/include/: buff_predict.hpp  buff_target.hpp
src/core/auto_buff/buff_tagret/src/: buff_target.cpp
src/core/base_hit/: CMakeLists.txt  package.xml
src/core/base_hit/detect/include/: detector.hpp  openvino_infer.hpp
src/core/base_hit/detect/src/: detector.cpp  openvino_infer.cpp
src/core/detected/: CMakeLists.txt  package.xml
src/core/detected/include/common/: armor.hpp
src/core/detected/include/detector/: common_detector.hpp
src/core/detected/include/node/: armor_detector_node.hpp
src/core/detected/src/classifier/: armor_classifier.cpp
src/core/planner/: CMakeLists.txt
src/core/serial/: CMakeLists.txt  package.xml
src/core/serial/include/: serial_node.hpp
src/core/serial/test/: serial.cpp
src/core/solver/: package.xml
src/core/solver/include/: solver_node.hpp
src/core/solver/src/: solver_node.cpp
src/core/solver/test/: geometric_compensator.cpp  geometric_compensator.hpp
src/core/tracker/: CMakeLists.txt  package.xml
src/core/tracker/include/: tracker.hpp  tracker_node.hpp
src/core/tracker/src/: tracker.cpp  tracker_node.cpp
src/core/tracker/test/: tracker_node.cpp  tracker_node.hpp
src/core/utils/: CMakeLists.txt
src/core/utils/include/: crc.hpp  detector_tools.hpp  imu_data_processor.hpp  math_tools.hpp  performance_monitor.hpp  thread_safe_queue.hpp  trajectory.hpp  video.hpp  yaml.hpp
src/core/utils/src/: imu_data_processor.cpp  math_tools.cpp  video.cpp
src/io/cboard/: CMakeLists.txt  package.xml
src/io/cboard/include/: cboard.hpp  command.hpp  socketcan.hpp
src/io/cboard/src/: cboard.cpp
src/io/deveice/: CMakeLists.txt  package.xml
src/io/gimbal/: CMakeLists.txt  package.xml
src/io/gimbal/src/: gimbal.cpp
src/launch/: CMakeLists.txt  package.xml
src/launch/launch/: launch_blue.launch.py  launch_node.launch.py  launch_red.launch.py
src/node/: CMakeLists.txt  package.xml
src/node/include/: base_hit_node.hpp  capture_node.hpp  hero.hpp  sentry.hpp  standard3.hpp  test_node.hpp  test_node_aimer.hpp  test_node_cv.hpp  test_node_deep.hpp  video_node.hpp
src/node/src/: base_hit_node.cpp  hero.cpp  sentry.cpp  standard.cpp  standard3.cpp  test_node.cpp  test_node_aimer.cpp  test_node_cv.cpp  test_node_deep.cpp  video_node.cpp
src/test_node/: CMakeLists.txt  package.xml
src/test_node/include/: calibration_common.hpp  capture_node.hpp  test_node_aimer.hpp  test_node_cv.hpp  test_node_deep.hpp
src/test_node/src/: base_hit_node.cpp  camera_calib_node.cpp  capture_node.cpp  handeye_calib_node.cpp  test_node_aimer.cpp  test_node_cv.cpp  test_node_deep.cpp  video_node.cpp
(+216 files in other folders)
