<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_node</name>
  <version>0.0.0</version>
  <description>Bring up all thing of radar</description>
  <maintainer email="chenx_dust@outlook.com">Chenx Dust</maintainer>
  <license>The MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 添加依赖项 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
