<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipeline</name>
  <version>0.0.1</version>
  <description>用于测试海康相机管线的简易节点，负责拉取图像并发布ROS话题。</description>

  <maintainer email="chenx_dust@outlook.com">Chenx Dust</maintainer>
  <license>The MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>Eigen3</depend>
  <depend>utils</depend>
  <depend>serial</depend>
  <depend>autoaim_msgs</depend>
  <depend>deveice</depend>
  <depend>auto_aim</depend>
  <depend>auto_buff</depend>
  <depend>auto_base</depend>

  <build_depend>OpenCV</build_depend>

  <exec_depend>OpenCV</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
