<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_pipeline</name>
  <version>0.0.1</version>
  <description>测试与调试用的pipeline节点程序。</description>

  <maintainer email="chenx_dust@outlook.com">Chenx Dust</maintainer>
  <license>The MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>Eigen3</depend>
  <depend>utils</depend>
  <depend>yaml-cpp</depend>
  <depend>serial</depend>
  <depend>autoaim_msgs</depend>
  <depend>deveice</depend>
  <depend>auto_aim</depend>
  <depend>auto_buff</depend>
  <depend>auto_base</depend>

  <build_depend>OpenCV</build_depend>
  <exec_depend>OpenCV</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
