<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- 包的基本信息 -->
  <name>aimer</name>
  <version>1.0.0</version>
  <description>自瞄算法核心库，提供目标瞄准点计算和弹道预测功能</description>
  <maintainer email="your_email@example.com">你的名字</maintainer>
  <license>MIT</license>

  <!-- 构建工具依赖 -->
  <!-- ament_cmake是ROS2的CMake构建系统，所有ROS2包都需要它 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>utils</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp-vendor</depend>
  <depend>fmt</depend>
  <depend>cboard</depend>
  <depend>detected</depend>
  <depend>predictor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>