<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>filter_lib</name>
  <version>1.0.0</version>
  <description>
    A ROS2 static library providing Kalman and Extended Kalman filters
    for robotic applications, especially for target tracking and prediction.
  </description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 构建依赖 -->
  <build_depend>eigen</build_depend>
  <build_depend>libceres-dev</build_depend>
  
  <!-- 执行依赖 -->
  <exec_depend>eigen</exec_depend>
  <exec_depend>libceres-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
