<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_base</name>
  <version>0.1.0</version>
  <description>Base hit detection module using OpenVINO inference.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>yaml-cpp</depend>
  <depend>fmt</depend>
  <depend>libopencv-dev</depend>
  <depend>openvino</depend>
  <depend>utils</depend>
  <depend>eigen3</depend>
  <depend>deveice</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
